--- a/index.html
+++ b/index.html
@@ -82,16 +82,55 @@
                 </div>
               </div>
             </div>
-            <div class="hero-form">
-             <div class="container">
-              <form action="#" method="post" class="form">
-                <div class="form-title">
-                  <h2 class="text">求職者向け登録フォーム</h2>
+            <!-- <div class="hero-form">
+              <div class="container">
+                <form action="#" method="post" class="form">
+                  <div class="form-title">
+                    <h2 class="text">求職者向け登録フォーム</h2>
+                  </div>
+                </form>
+              </div>
+            </div> -->
+          </div>
+        </section>
+        <section class="service">
+          <div class="container">
+            <div class="service-main">
+              <div class="service-heading">
+                <a href="#"><h2 class="text text-heading">サービス</h2></a>
+              </div>
+              <div class="service-content">
+                <div class="service-list">
+                  <div class="service-item">
+                    <div class="service-icon">
+                       <a href="#"><img src="./images/Frame-icon1.svg" alt="" /></a>
+                    </div>
+                    <div class="service-title">
+                      <h3 class="text text-title">転職支援サービス／人材紹介サービス</h3>
+                      <p class="text text-decs">
+                        富士誇はハイクラスのエンジニアに特化した転職サービスをご提供しております。コンサルタントへのご転職は是非ご相談ください。
+                      </p>
+                    </div>
+                  </div>
+                  <div class="service-item">
+                    <div class="service-icon">
+                       <a href="#"><img src="./images/Frame-icon2.svg" alt="" /></a>
+                    </div>
+                    <div class="service-title">
+                      <h3 class="text text-title">求人情報サイトの運営</h3>
+                      <p class="text text-desc">
+                        富士誇が転職エージェントとして取扱求人の全件を本サイトに掲載しています。一部は非公開求人となっておりますが、キャリアカウンセリングの際には全求人を公開しています。
+                      </p>
+                    </div>
+                  </div>
                 </div>
-                
-            </form>
-             </div>
+              </div>
             </div>
+          </div>
+        </section>
+        <section class="test">
+          <div class="container">
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis at incidunt illum voluptatibus, minus quod delectus est unde, quam repellat quo natus? Sint earum vitae repellat id, obcaecati enim amet?</div>
           </div>
         </section>
       </main>
