--- a/index-fujico2.html
+++ b/index-fujico2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fujico landing pages 1</title>
+    <title>Fujico landing pages 2</title>
     <!-- slick slider -->
     <!-- link fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -65,7 +65,7 @@
         </nav>
       </header>
       <main>
-        <section class="hero">
+        <section class="hero2">
           <div class="container">
             <div class="hero-main">
               <div class="hero-form">
@@ -107,28 +107,12 @@
               </div>
             </div>
           </div>
-          <div class="hero-title">
-            <div class="hero-heading">
-              <div class="container">
-                <h1 class="text text-hero-title">
-                  年収800万円以上ハイクラスエージェント
-                </h1>
-              </div>
-            </div>
-            <div class="hero-desc">
-              <div class="container">
-                <h2 class="text text-title-while">
-                  是非ご相談をお待ちしております。
-                </h2>
-              </div>
-            </div>
-          </div>
         </section>
         <section class="service">
           <div class="container">
             <div class="service-main">
               <div class="service-heading">
-                <h2 class="text text-heading">サービス</h2>
+                <a href="#"><h2 class="text text-heading">サービス</h2></a>
               </div>
               <div class="service-content">
                 <div class="service-list">
@@ -167,9 +151,9 @@
         </section>
         <section class="feature">
           <div class="container">
-            <div class="feature-main">
+            <div class="feature2-main">
               <div class="feature-heading">
-                <h2 class="text text-heading">特徴</h2>
+                <a href="#"><h2 class="text text-heading">特徴</h2></a>
               </div>
               <div class="feature-content">
                 <div class="feature-list">
@@ -218,13 +202,6 @@
                   </div>
                 </div>
               </div>
-              <div class="feature-botton">
-                <div class="feature-link">
-                  <a href="#" class="text">求職者向け登録フォーム</a>
-                  <span>/</span>
-                  <a href="#" class="text">企業向け問い合わせフォーム</a>
-                </div>
-              </div>
             </div>
           </div>
         </section>
@@ -232,13 +209,183 @@
           <div class="container">
             <div class="experience-main">
               <div class="experience-heading">
-                <h2 class="text text-heading">転職体験記</h2>
+                <a href="#"><h2 class="text text-heading">転職体験記</h2></a>
               </div>
-              <div class="experience-content">
-                <div class="experience-list">
-                  <div class="experience-item">
-                    <div class="experience-title">
-                      <h3 class="text experience-text">COMMING SOON</h3>
+              <div class="experience2-content">
+                <div class="experience2-left">
+                  <div class="experience2-title">
+                    <h3 class="text text-s18b">
+                      情食んぐクひ出適ゃ完闘ルせ映選録
+                    </h3>
+                    <p class="text text-decs">
+                      ラハノ高身ツ真図スヨナ景務かい決得ひぜ報35訴問券97企東物自らとは。官ハニエ暮稿ッ魅前江タスケサ品申づス指名軍るをば宇表ネケヤヲ針知さびち学半カ際大76数ば問喚がゃ。政みで優社けげ載54待トユヱ万長員らづレル夜件はとレ懸72現カソワラ前自ヲイヘエ級窮ゃ改質ケヨツヲ中喜レ正線ロシト択声ルヨモミ革意ネア問五ル専河ふぐゃら応困すせか呼互札づん。
+                    </p>
+                    <p class="text text-desc">
+                      空ま応始リロエマ米島ヌネワフ日6車ヒ聞広コソルネ福将島ニネ蔵野べ王全ハニユカ覧記ヌトロ芝掲況おフいど渡市ど惑夜求境房ひレび定延ッつぼ妙催リげき。
+                    </p>
+                  </div>
+                </div>
+                <div class="experience2-right">
+                  <div class="experience2-item">
+                    <div class="experience2-img">
+                      <a href="#">
+                        <img srcset="./images/ex-img1.png 2x" alt=""
+                      /></a>
+                    </div>
+                    <div class="experience2-heading">
+                      <h3 class="text text-s18b">
+                        務ナニ山全でスぼ定紙タヌ掲8
+                      </h3>
+                      <p class="text text-decs">
+                        務ナニ山全でスぼ定紙タヌ掲8務ざろ置範ぐりぼ文属エ昨曲井むめ査送レだは機同委え職受敗トょもよ子搭場ざつぎせ名大スメオイ載内う込争換ユロマ重謝らぽトべ。
+                      </p>
+                    </div>
+                    <div class="experience2-triangle"></div>
+                  </div>
+                  <div class="experience2-item">
+                    <div class="experience2-img">
+                      <a href="#"
+                        ><img srcset="./images/ex-img2.png 2x" alt=""
+                      /></a>
+                    </div>
+
+                    <div class="experience2-heading">
+                      <h3 class="text text-s18b">
+                        併ぜてる現代みにぽゅ動選生イ新近づけ童信
+                      </h3>
+                      <p class="text text-decs">
+                        併ぜてる現代みにぽゅ動選生イ新近づけ童信セワ仕歴レ検使モトケ思士ミラヌア格設ゃぞ阪革コ図血ぴとなド突舵余ふにぶ無千ユヘナウ愛2支ゅ重理ツリミネ論聞ト。
+                      </p>
+                    </div>
+                    <div class="experience2-triangle"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="fsqs">
+          <div class="container">
+            <div class="fsqs-main">
+              <div class="fsqs-heading">
+                <h2 class="text text-heading">よくある質問</h2>
+              </div>
+              <div class="fsqs-content">
+                <div class="fsqs-list">
+                  <div class="fsqs-item">
+                    <div class="fsqs-question">
+                      <h3 class="text text-s18b">
+                        Q. サービスは本当に無料なんですか？
+                      </h3>
+                      <div class="fsqs-icon">
+                        <i class="icofont-plus-circle"></i>
+                      </div>
+                    </div>
+                    <div class="fsqs-hidden">
+                      <p class="text text-decs">
+                        <span>A.</span>
+                        サービスはすべて無料になっております。富士誇の転職支援サービスでは、プロの転職コンサルタントが丁寧にあなたの経験・強み・希望をお伺いします。<br />
+                        富士誇は厚生労働省より認可を受けた有料職業紹介事業者であり、求職する全ての方に本サービスを提供しています。
+                        求人企業から頂くコンサルティング料金で運営をしておりますので、転職を希望されている個人のお客様からは一切料金は頂きません。<br />
+                        あなたの経験とキャリアプランを整理し、可能性を最大に引き出すお手伝いをいたします。
+                      </p>
+                    </div>
+                  </div>
+                  <div class="fsqs-item">
+                    <div class="fsqs-question">
+                      <h3 class="text text-s18b">
+                        Q. 仕事をつづけながらの転職活動は可能でしょうか？
+                      </h3>
+                      <div class="fsqs-icon">
+                        <i class="icofont-plus-circle"></i>
+                      </div>
+                    </div>
+                    <div class="fsqs-hidden">
+                      <p class="text text-decs">
+                        <span>A.</span>
+                        サービスはすべて無料になっております。富士誇の転職支援サービスでは、プロの転職コンサルタントが丁寧にあなたの経験・強み・希望をお伺いします。<br />
+                        富士誇は厚生労働省より認可を受けた有料職業紹介事業者であり、求職する全ての方に本サービスを提供しています。
+                        求人企業から頂くコンサルティング料金で運営をしておりますので、転職を希望されている個人のお客様からは一切料金は頂きません。<br />
+                        あなたの経験とキャリアプランを整理し、可能性を最大に引き出すお手伝いをいたします。
+                      </p>
+                    </div>
+                  </div>
+                  <div class="fsqs-item">
+                    <div class="fsqs-question">
+                      <h3 class="text text-s18b">
+                        Q.
+                        富士誇の転職サービス登録完了後、どれくらいで連絡がきますか？
+                      </h3>
+                      <div class="fsqs-icon">
+                        <i class="icofont-plus-circle"></i>
+                      </div>
+                    </div>
+                    <div class="fsqs-hidden">
+                      <p class="text text-decs">
+                        <span>A.</span>
+                        サービスはすべて無料になっております。富士誇の転職支援サービスでは、プロの転職コンサルタントが丁寧にあなたの経験・強み・希望をお伺いします。<br />
+                        富士誇は厚生労働省より認可を受けた有料職業紹介事業者であり、求職する全ての方に本サービスを提供しています。
+                        求人企業から頂くコンサルティング料金で運営をしておりますので、転職を希望されている個人のお客様からは一切料金は頂きません。<br />
+                        あなたの経験とキャリアプランを整理し、可能性を最大に引き出すお手伝いをいたします。
+                      </p>
+                    </div>
+                  </div>
+                  <div class="fsqs-item">
+                    <div class="fsqs-question">
+                      <h3 class="text text-s18b">
+                        Q. 書類の添削はして頂けるのでしょうか？
+                      </h3>
+                      <div class="fsqs-icon">
+                        <i class="icofont-plus-circle"></i>
+                      </div>
+                    </div>
+                    <div class="fsqs-hidden">
+                      <p class="text text-decs">
+                        <span>A.</span>
+                        サービスはすべて無料になっております。富士誇の転職支援サービスでは、プロの転職コンサルタントが丁寧にあなたの経験・強み・希望をお伺いします。<br />
+                        富士誇は厚生労働省より認可を受けた有料職業紹介事業者であり、求職する全ての方に本サービスを提供しています。
+                        求人企業から頂くコンサルティング料金で運営をしておりますので、転職を希望されている個人のお客様からは一切料金は頂きません。<br />
+                        あなたの経験とキャリアプランを整理し、可能性を最大に引き出すお手伝いをいたします。
+                      </p>
+                    </div>
+                  </div>
+                  <div class="fsqs-item">
+                    <div class="fsqs-question">
+                      <h3 class="text text-s18b">
+                        Q. 転職エージェントと求人サイトの違いはなんですか？
+                      </h3>
+                      <div class="fsqs-icon">
+                        <i class="icofont-plus-circle"></i>
+                      </div>
+                    </div>
+                    <div class="fsqs-hidden">
+                      <p class="text text-decs">
+                        <span>A.</span>
+                        サービスはすべて無料になっております。富士誇の転職支援サービスでは、プロの転職コンサルタントが丁寧にあなたの経験・強み・希望をお伺いします。<br />
+                        富士誇は厚生労働省より認可を受けた有料職業紹介事業者であり、求職する全ての方に本サービスを提供しています。
+                        求人企業から頂くコンサルティング料金で運営をしておりますので、転職を希望されている個人のお客様からは一切料金は頂きません。<br />
+                        あなたの経験とキャリアプランを整理し、可能性を最大に引き出すお手伝いをいたします。
+                      </p>
+                    </div>
+                  </div>
+                  <div class="fsqs-item">
+                    <div class="fsqs-question">
+                      <h3 class="text text-s18b">
+                        Q.
+                        複数の転職サイトにすでに登録してしまっているのですが、大丈夫ですか？
+                      </h3>
+                      <div class="fsqs-icon">
+                        <i class="icofont-plus-circle"></i>
+                      </div>
+                    </div>
+                    <div class="fsqs-hidden">
+                      <p class="text text-decs">
+                        <span>A.</span>
+                        サービスはすべて無料になっております。富士誇の転職支援サービスでは、プロの転職コンサルタントが丁寧にあなたの経験・強み・希望をお伺いします。<br />
+                        富士誇は厚生労働省より認可を受けた有料職業紹介事業者であり、求職する全ての方に本サービスを提供しています。
+                        求人企業から頂くコンサルティング料金で運営をしておりますので、転職を希望されている個人のお客様からは一切料金は頂きません。<br />
+                        あなたの経験とキャリアプランを整理し、可能性を最大に引き出すお手伝いをいたします。
+                      </p>
                     </div>
                   </div>
                 </div>
@@ -246,20 +393,13 @@
             </div>
           </div>
         </section>
-        <section class="cta">
-          <div class="container">
-            <div class="cta-main">
-              <a href="#" class="text cta-text">求職者向け登録フォーム</a>
-              <span>OR</span>
-              <a href="#" class="text cta-text">求職者向け登録フォーム</a>
-            </div>
-          </div>
-        </section>
         <section class="customer">
           <div class="container">
             <div class="customer-main">
               <div class="customer-heading">
-                <h2 class="text text-heading">取り扱い企業</h2>
+                <a href="#">
+                  <h2 class="text text-heading">取り扱い企業</h2>
+                </a>
               </div>
               <div class="customer-content">
                 <div class="customer-logo">
